<?xml version="1.0"?>
<package>
  <name>object_cp_gen</name>
  <version>0.0.1</version>
  <description> test </description>

  <maintainer email="prs@us.es">Pablo Ramón Soria</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rgbd_tools</build_depend>
  <build_depend>grasping_tools</build_depend>
  <build_depend>arm_controller</build_depend>
  

  <run_depend>arm_controller</run_depend>
  <run_depend>grasping_tools</run_depend>
  <run_depend>rgbd_tools</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  
  <export>

  </export>
</package>
